# archive

./: README.md
adv-algs/: README.md
adv-algs/final/: CMakeLists.txt  README.md  main.cpp  mat.cpp  mat.hpp  run_data
adv-algs/pa1/bfs-test/: Program.cs  bfs-test.csproj
adv-algs/pa1/bfs-test/Properties/: AssemblyInfo.cs
adv-algs/pa1/pa1/: App.xaml  App.xaml.cs  BFS.cs  FFA.cs  Graph.cs  MainWindow.xaml  MainWindow.xaml.cs  pa1.csproj  pa1.sln
adv-algs/pa1/pa1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
adv-algs/pa1/pa1/tests/: acm_tests.txt  bfs_test2.txt  bfs_test3.txt  bfs_test4.txt  museum_test1.txt  museum_test2.txt  museum_test3.txt
adv-algs/pa1/python/: 2path10.txt  2path100.txt  2path1000.txt  2path10000.txt  graph.py
adv-algs/pa1/test/: Program.cs  test.csproj
adv-algs/pa1/test/Properties/: AssemblyInfo.cs
adv-algs/pa2/: pa2.sln
adv-algs/pa2/pa2/: ASCII_Image.cs  BinaryImage.cs  PCA.cs  Program.cs  README.txt  SVD.cs  pa2.csproj
adv-algs/pa2/pa2/Properties/: AssemblyInfo.cs
adv-algs/pa2/pa2/tests/: iris.txt  iris4column.txt  samplepca.txt  samplepca2.txt  test1.pgm  test2.txt  (+6 more)
comp-des/: README.md
comp-des/calc/: CMakeLists.txt  README.md  eval.md
comp-des/calc/calc/: CMakeLists.txt  main.cpp
comp-des/calc/calc2post/: CMakeLists.txt  main.cpp
comp-des/calc/calc2sexpr/: CMakeLists.txt  main.cpp
comp-des/calc/libcalc/: CMakeLists.txt  parse.cpp  parse.hpp  syntax.cpp  syntax.hpp
comp-des/calc/tests/: CMakeLists.txt  calc.cpp  eval.cpp  lex.cpp  parse.cpp  postfix.cpp  prefix.cpp
comp-des/calc/tests/inputs/: eval.txt  lex.txt  postfix.txt  prefix.txt
comp-des/calc2/: CMakeLists.txt  README.md  test.sh
comp-des/calc2/calc/: main.cpp
comp-des/calc2/libcalc/: CMakeLists.txt  expr_ast.cpp  expr_ast.hpp  lex.cpp  lex.hpp  parse.cpp  parse.hpp  result.cpp  result.hpp  type_ast.cpp  type_ast.hpp
comp-des/calc2/tests/: CMakeLists.txt  eval.cpp  lex.cpp  parse.cpp
comp-des/calc2/tests/inputs/: eval.txt  lex.txt  parse.txt
comp-des/llvm/: README.md
comp-des/llvm/strops/: build.sh  run.sh
graphics/pa4/mgg12-pa4/: mgg12-pa4.sln
ipp-nbody/: README.md  serial.cpp
ipp-nbody/book/: build  build_parallel  parallel.cpp  serial.cpp
ipp-nbody/hut_makino/: build  build2  hut-makin_8.xcf  hut-makino_128.xcf  hut-makino_32.xcf  hut-makino_512.xcf  nbody2  nbody_sh1.C  nbody_sh2.c  run  run2
llvm/strops/src/: strcmp.s  strcpy.s  strlen.s
optimiz/: README.md
optimiz/pa1/: CMakeLists.txt  compiler.cpp  lexer.cpp  run.sh  strops.cpp  strops.hpp
optimiz/pa2/: CMakeLists.txt  clean.sh  codegen.cpp  main
optimiz/tests/: automaton.txt  binrep.txt  fibonacci.txt  mandelbrot.txt  movingedge.txt  multiply.txt  sort.txt  sort_insertion.txt  tax.txt  trivia.txt
optimiz/util/: strops.cpp  strops.hpp  tree.cpp  tree.hpp
parallel-term/: README.md
visualization/pa2/: main.cpp
visualization/pa3/: main.cpp
visualization/term/: README.md
(+45 files in other folders)
